# realtime-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  init-db.sql  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  DEVELOPMENT.md  DOCKER.md  README.md  TESTING.md  consumer.md  dev_practices.md  generator.md
grafana/provisioning/dashboards/: datacenter-overview.json  production-monitoring.json
grafana/provisioning/datasources/: timescaledb.yml
src/: __init__.py
src/consumers/: __init__.py  database.py
src/consumers/anomaly/: __init__.py  cache.py  consumer.py  database.py  detect.py  models.py  train.py  trainer.py
src/consumers/anomaly/methods/: __init__.py  base.py  stl_zscore.py
src/consumers/storage/: __init__.py  consume.py  consumer.py  database.py  models.py
src/core/: __init__.py  database.py  logger.py
src/generator/: __init__.py  config.py  generate.py  generator.py  models.py  server_state.py  service_state.py
tests/: __init__.py  conftest.py
tests/consumers/: __init__.py
tests/consumers/storage/: __init__.py  test_consumer.py  test_database.py  test_models.py
tests/core/: test_database.py
tests/generator/: __init__.py  test_generator.py  test_models.py  test_server_state.py  test_service_state.py
